add goodmorning to hello.html

--- a/hello.html
+++ b/hello.html
@@ -29,7 +29,7 @@
         これまでプロデュースしてきたアイドル達の記録ページである。
       </h1>
       <h2>This page of records of Bauer's producing at IDOLM@STER series.</h2>
-      <h3>thishishishi</h3>
+      <h3>good morning</h3>
     </div>
     
     <div class="contents">
